@@ -3697,6 +3697,7 @@ STR_6622    :Restrict object to the Scenario Editor and Sandbox mode.
 STR_6623    :Type ‘help’ for a list of available commands. Type ‘hide’ to hide the console.
 STR_6624    :Tile Inspector: Sort elements
 STR_6625    :Invalid colour
+STR_6626    :Animation is backwards
 
 #############
 # Scenarios #
