@@ -4043,6 +4043,8 @@ enum : uint16_t
 
     STR_ERR_INVALID_COLOUR = 6625,
 
+    STR_TILE_INSPECTOR_WALL_ANIMATION_IS_BACKWARDS = 6626,
+
     // Have to include resource strings (from scenarios and objects) for the time being now that language is partially working
     /* MAX_STR_COUNT = 32768 */ // MAX_STR_COUNT - upper limit for number of strings, not the current count strings
 };
